# thenvoi-mcp

./: .cursorrules  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  claude.md  mcp_config_example.json  pyproject.toml  release-please-config.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  pr-title.yml  release.yml
examples/: langchain_agent.py  langgraph_agent.py
scripts/: extract_openapi_examples.py
src/thenvoi_mcp/: __init__.py  config.py  server.py  shared.py
src/thenvoi_mcp/tests/: __init__.py  conftest.py  test_agents.py  test_chats.py  test_messages.py  test_participants.py  test_tools.py
src/thenvoi_mcp/tools/: __init__.py  agents.py  chats.py  events.py  identity.py  lifecycle.py  messages.py  participants.py  tools.py  user_agents.py  user_chats.py  user_messages.py  user_participants.py  user_profile.py
src/thenvoi_mcp/tools/agent/: __init__.py  agent_chats.py  agent_contacts.py  agent_events.py  agent_identity.py  agent_lifecycle.py  agent_memories.py  agent_messages.py  agent_participants.py  chats.py
src/thenvoi_mcp/tools/human/: __init__.py  chats.py  human_agents.py  human_chats.py  human_contacts.py  human_memories.py  human_messages.py  human_participants.py  human_profile.py  messages.py
tests/: __init__.py  conftest.py  conftest_integration.py  fixtures.py  test_agent_contacts.py  test_chats.py  test_contacts_and_memories.py  test_events.py  test_human_agents.py  test_human_chats.py  test_human_contacts.py  test_human_messages.py  test_human_participants.py  test_human_profile.py  test_identity.py  test_lifecycle.py  test_memories.py  test_messages.py  test_participants.py  test_release_infrastructure.py  test_release_please_dryrun.py  test_testpypi_publish.py  test_transport_security.py
tests/integration/: conftest.py  test_error_cases.py  test_full_workflow.py  test_smoke.py
